[ticket/15309] Fix pagination overlap
Mark the contents of the column as "left-box", enabling proper alignment

PHPBB3-15309

--- a/phpBB/styles/prosilver/theme/common.css
+++ b/phpBB/styles/prosilver/theme/common.css
@@ -886,7 +886,6 @@ fieldset.fields1 dl.pmlist dd.recipients {
 /* Pagination in viewforum for multipage topics */
 .row .pagination {
 	display: block;
-	margin-top: -12px;
 }
 
 .row .pagination > ul {
